correction alignement de contact en desktop

--- a/css/css/style.css
+++ b/css/css/style.css
@@ -451,7 +451,7 @@ footer a {
   footer > h4 {
     margin-top: 0.8rem;
   }
-  footer > p {
+  footer > p, footer a {
     margin-top: -1rem;
   }
 }
