--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -43,7 +43,7 @@ footer {
     > h4 {
       margin-top: 0.8rem;
     }
-    > p {
+    > p, a {
       margin-top: -1rem;
     }
   }
